# mineru-data-agent

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  技术报告.md
docs/: API_CONTRACT.md  BENCHMARK_AND_ROADMAP.md  CASE_STUDIES.md  CLI_CONTRACT.md  COMPETITION_ALIGNMENT.md  DEPLOYMENT_AND_API.md  ENGINEERING_EVIDENCE.md  EVALUATION_GUIDE.md  EVALUATION_STRATEGY.md  EXECUTIVE_SUMMARY.md  FEATURES.md  LIVE_LLM_RUNBOOK.md  OPEN_SOURCE_RELEASE.md  ORIGINALITY_AND_COMPLIANCE.md  PROFILE_EXTENSION_GUIDE.md  QUICK_DECISION_GUIDE.md  SUBMISSION_CHECKLIST.md  TECHNICAL_REPORT.md  技术报告.md
examples/: .env.example  batch_manifest.json  batch_manifest_5cases.json  challenge_manifest.json  llm_live_cases.json  sample_html_report.html
scripts/: build_agent_value_report.py  build_artifacts_index.py  build_baseline_comparison.py  build_code_quality_report.py  build_cost_model.py  build_cost_tradeoff_report.py  build_coverage_report.py  build_evaluation_report.py  build_llm_cost_report.py  build_llm_impact_report.py  build_long_document_risk_report.py  build_recovery_effectiveness_report.py  build_recovery_evidence.py  build_retrieval_validation_report.py  build_stability_report.py  collect_mineru_case.ps1  collect_native_case.ps1  fetch_real_world_docs.py  generate_complex_pdf_fixtures.py  generate_office_fixtures.py  make_submission_zip.ps1  run_adaptive_planning_cases.py  run_agent_decision_cases.py  run_agent_live_cases.py  run_api_load_smoke.py  (+9 more)
(+577 files in other folders)
