[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mineru-data-agent"
version = "0.1.0"
description = "A MinerU-based Data Agent for complex document parsing, validation, and traceable structured output."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.13.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
mineru = [
    "mineru[pipeline]>=3.1.0",
]
pdf-fixtures = [
    "reportlab>=4.0.0",
]
office-fixtures = [
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
]

[project.scripts]
data-agent = "mineru_data_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
